2006-10-24  Karl Berry  <karl@gnu.org>  (tiny change)

	* util/texindex.c (readline): do the reallocation (more) correctly.
	From Miloslav Trmac.

2006-10-10  Karl Berry  <karl@gnu.org>

	* TODO: would be nice if accent commands implicitly used
	dotless i/j.

2006-10-09  Miloslav Trmac  <mitr@redhat.com>  (tiny change)

	* util/texindex.c (gettempname): new fn, split off from maketempname.
        (maketempname): call it.  We weren't deleting temp files.
        (sort_offline): check result from maketempname.

2006-10-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* makeinfo/tests/quote-args: Add missing $srcdir.

2006-10-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\singlequotechar): rename to \codequoteright.
	(\quoteexpand): rename to \rquoteexpand.
	(\codequoteleft): new def, to look for @set codequotebacktick.
	(\lquoteexpand, \quoteexpand): new defs.
	(\lquoteChar, \rquoteChar, \dashChar, \underChar: new \chardef's.
	(\code): must use new \...Char values, since now ` is active.

2006-10-01  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_bibtex): also run bibtex if "no .aux file" in
	the .log, and "\bibdata" in the aux, for the first run of a btxmac
	file.  From Oleg Katsitadze.

2006-09-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Inserting Braces): spurious ppp.

2006-09-22  Stepan Kasal  <kasal@ucw.cz>

	* configure.ac: Add a comment explaining `env -i PATH=$PATH'.

2006-09-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (code): spurious "in the printed manual", from
	Bob C.

2006-09-01  Eli Zaretskii  <eliz@gnu.org>

	* doc/texinfo.txi (Multitable Rows): Document the Info output of
	@headitem.

2006-08-26  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (command_table): new command @textdegree{}.
	* makeinfo/lang.c (cm_special_char): handle textdegree.
	* doc/texinfo.tex (\textdegree): define it.

	* doc/texinfo.txi (Output Formats): update Beebe paper reference.
	(Printed Books): update texinfo.tex reference.